# Cattlelyst_software_2021

./: 1.How to load the models and set them up for further analyses.ipynb  2.2 Analysis for reactions addition allowing growth on uncommon substrates and production of a target compound.ipynb  4. How to use the pipeline when production of the target is the only objective.ipynb  5. Running the thermodynamic analysis with individual functions.ipynb  6. How to find reaction knock-out .ipynb  7. Call from command line.ipynb  Analysis for reactions addition allowing growth on uncommon substrates - itacon error.ipynb  LICENSE  README.md  input_mdf_lac_Run_9-10.tsv  lac_Run_9-10.tsv  manual-pdf.docx  pyproject.toml  setup.cfg
.ipynb_checkpoints/: 0.How to fill the input file-checkpoint.ipynb  2.1 Analysis for reactions addition allowing growth on uncommon substrates -checkpoint.ipynb  2.2 Analysis for reactions addition allowing growth on uncommon substrates and production of a target compound-checkpoint.ipynb  3. How to use the pipeline for studying auxotrophy-checkpoint.ipynb  4. How to use the pipeline when production of the target is the only objective-checkpoint.ipynb  Analysis for reactions addition allowing growth on uncommon substrates -checkpoint.ipynb
Tutorials/: 3. How to use the pipeline for studying auxotrophy.ipynb
inputs/: ecoli_for_arg.csv  lac_200925wcomments.csv  putida_cellob.csv  putida_trp.csv
outputs/: consumption.csv  detailed_output.csv
pipeline/: LICENSE  README.md  call_full_analysis.py  query_bioparts.py
pipeline_cmd/: call_full_analysis_aux.py  (+1 more)
(+136 files in other folders)
